SERVER-50874 Remove const qualifier from return type in api_parameters.h