src/mongo/db/api_parameters.h
@@ -75,7 +75,7 @@ public:
         _apiDeprecationErrors = apiDeprecationErrors;
     }
 
-    const bool getParamsPassed() const {
+    bool getParamsPassed() const {
         return _apiVersion || _apiStrict || _apiDeprecationErrors;
     }
 
